force-app/main/default/objects/Account/fields/Hierarchy_Code__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hierarchy Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>