force-app/main/default/objects/Account/fields/Holiday_Card__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Card__c</fullName>
    <inlineHelpText>Christmas, Thanksgiving, etc</inlineHelpText>
    <label>Wealth Holiday Cards</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>