force-app/main/default/objects/Account/fields/ID_Verification_No__c.field-meta.xml
<CustomField>
    <fullName>ID_Verification_No__c</fullName>
    <description>Identity Verification Reference Number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Identity Verification Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>