force-app/main/default/objects/Account/fields/Informal_Addressee__c.field-meta.xml
<CustomField>
    <fullName>Informal_Addressee__c</fullName>
    <description>This is what appears on the inside of mail pieces like letters. It is more informal in nature.</description>
    <formula>&quot;Dear &quot;  &amp;  FirstName  &amp; &quot;, &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is what you&#39;ll see on the inside of mail pieces like letters.</inlineHelpText>
    <label>Informal Addressee</label>
    <type>Text</type>
</CustomField>