force-app/main/default/objects/Account/fields/Investment_Communication_Email__c.field-meta.xml
<CustomField>
    <fullName>Investment_Communication_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Monthly, quarterly and annual FNIM communication pieces</inlineHelpText>
    <label>Investment Communication Email</label>
    <type>Checkbox</type>
</CustomField>