force-app/main/default/objects/Account/fields/isCreatedBySystem__c.field-meta.xml
<CustomField>
    <fullName>isCreatedBySystem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCreatedBySystem</label>
    <type>Checkbox</type>
</CustomField>