force-app/main/default/objects/Account/fields/Joint_Informal_Addressee__c.field-meta.xml
<CustomField>
    <fullName>Joint_Informal_Addressee__c</fullName>
    <formula>IF( Put_This_Contact_First__c  = TRUE,

IF(Spouse_Client_Record__pc  &lt;&gt; &quot;&quot;, &quot;Dear &quot; &amp; FirstName &amp; &quot; &amp; &quot; &amp; Spouse_Client_Record__pr.FirstName &amp; &quot;,&quot;,&quot;&quot;)

,

IF(Spouse_Client_Record__pc  &lt;&gt; &quot;&quot;, &quot;Dear &quot; &amp; Spouse_Client_Record__pr.FirstName &amp; &quot; &amp; &quot; &amp; FirstName &amp; &quot;,&quot;,&quot;&quot;)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Joint Informal Addressee</label>
    <type>Text</type>
</CustomField>