force-app/main/default/objects/Account/fields/Joint_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Joint_Salutation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Joint Salutation</label>
    <length>40</length>
    <type>Text</type>
</CustomField>