force-app/main/default/objects/Account/fields/Legal_Firm__c.field-meta.xml
<CustomField>
    <fullName>Legal_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Legal Firm)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>