force-app/main/default/objects/Account/fields/Market_Summit__c.field-meta.xml
<CustomField>
    <fullName>Market_Summit__c</fullName>
    <inlineHelpText>Invitations to local economic seminars</inlineHelpText>
    <label>Market Summit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>