force-app/main/default/objects/Account/fields/Mobile_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile Indicator</label>
    <type>Checkbox</type>
</CustomField>