force-app/main/default/objects/Account/fields/Monthly_Investment_Update__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Investment_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monthly Investment Update</label>
    <type>Checkbox</type>
</CustomField>