force-app/main/default/objects/Account/fields/Mortgage_LO__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_LO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mortgage LO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customers1</relationshipName>
    <type>Lookup</type>
</CustomField>