force-app/main/default/objects/Account/fields/My_Relationship__c.field-meta.xml
<CustomField>
    <fullName>My_Relationship__c</fullName>
    <formula>OR(Commercial_Card_RM__r.Id=$User.Id, Commercial_Lending_RM__r.Id=$User.Id,  First_Bankcard_Affinity_RM__r.Id=$User.Id, Small_Business_RM__r.Id=$User.Id,  Washington_County_Bank_RM__r.Id=$User.Id, Wealth_Management_RM__r.Id=$User.Id, Retail_Banker__r.Id=$User.Id,  CTS_Officer__r.Id=$User.Id, Mortgage_LO__r.Id=$User.Id, NEST_Advisor__r.Id=$User.Id, Owner.Id=$User.Id)</formula>
    <label>My Relationship</label>
    <type>Checkbox</type>
</CustomField>