force-app/main/default/objects/Account/fields/My_Relationship_Commercial_Card__c.field-meta.xml
<CustomField>
    <fullName>My_Relationship_Commercial_Card__c</fullName>
    <formula>Commercial_Card_RM__r.Is_Me__c</formula>
    <label>My Relationship - Commercial Card</label>
    <type>Checkbox</type>
</CustomField>