force-app/main/default/objects/Account/fields/My_Relationship_Commercial_Lending__c.field-meta.xml
<CustomField>
    <fullName>My_Relationship_Commercial_Lending__c</fullName>
    <formula>Commercial_Lending_RM__r.Is_Me__c</formula>
    <label>My Relationship - Commercial Lending</label>
    <type>Checkbox</type>
</CustomField>