force-app/main/default/objects/Account/fields/My_Relationship_CTS__c.field-meta.xml
<CustomField>
    <fullName>My_Relationship_CTS__c</fullName>
    <formula>CTS_Officer__r.Is_Me__c</formula>
    <label>My Relationship - CTS</label>
    <type>Checkbox</type>
</CustomField>