force-app/main/default/objects/Account/fields/My_Relationship_First_Bankcard__c.field-meta.xml
<CustomField>
    <fullName>My_Relationship_First_Bankcard__c</fullName>
    <formula>First_Bankcard_Affinity_RM__r.Is_Me__c</formula>
    <label>My Relationship - First Bankcard</label>
    <type>Checkbox</type>
</CustomField>