force-app/main/default/objects/Account/fields/My_Relationship_Global_Banking__c.field-meta.xml
<CustomField>
    <fullName>My_Relationship_Global_Banking__c</fullName>
    <formula>Global_Banking_Officer__r.Is_Me__c</formula>
    <label>My Relationship - Global Banking</label>
    <type>Checkbox</type>
</CustomField>