force-app/main/default/objects/Account/fields/My_Relationship_Mortgage__c.field-meta.xml
<CustomField>
    <fullName>My_Relationship_Mortgage__c</fullName>
    <formula>Mortgage_LO__r.Is_Me__c</formula>
    <label>My Relationship - Mortgage LO</label>
    <type>Checkbox</type>
</CustomField>