force-app/main/default/objects/Account/fields/My_Relationship_NEST_Advisor__c.field-meta.xml
<CustomField>
    <fullName>My_Relationship_NEST_Advisor__c</fullName>
    <formula>NEST_Advisor__r.Is_Me__c</formula>
    <label>My Relationship - NEST Advisor</label>
    <type>Checkbox</type>
</CustomField>