force-app/main/default/objects/Account/fields/My_Relationship_Retail_Banker__c.field-meta.xml
<CustomField>
    <fullName>My_Relationship_Retail_Banker__c</fullName>
    <formula>Retail_Banker__r.Is_Me__c</formula>
    <label>My Relationship - Retail Banker</label>
    <type>Checkbox</type>
</CustomField>