force-app/main/default/objects/Account/fields/My_Relationship_Small_Business__c.field-meta.xml
<CustomField>
    <fullName>My_Relationship_Small_Business__c</fullName>
    <formula>Small_Business_RM__r.Is_Me__c</formula>
    <label>My Relationship - Small Business</label>
    <type>Checkbox</type>
</CustomField>