force-app/main/default/objects/Account/fields/My_Relationship_Wealth__c.field-meta.xml
<CustomField>
    <fullName>My_Relationship_Wealth__c</fullName>
    <formula>Wealth_Management_RM__r.Is_Me__c</formula>
    <label>My Relationship - Wealth</label>
    <type>Checkbox</type>
</CustomField>