force-app/main/default/objects/Account/fields/NAICS_Code_Description_ProBuild__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code_Description_ProBuild__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NAICS Code Description</label>
    <length>225</length>
    <type>Text</type>
</CustomField>