force-app/main/default/objects/Account/fields/NAICS_Code_Industry__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code_Industry__c</fullName>
    <formula>IF(LEFT(NAICS_Code_ProBuilder__c,2) = &quot;11&quot;, &quot;Agriculture, Forestry, Fishing and Hunting&quot;,
IF(LEFT(NAICS_Code_ProBuilder__c,2) = &quot;21&quot;, &quot;Mining, Quarrying, and Oil and Gas Extraction&quot;,
IF(LEFT(NAICS_Code_ProBuilder__c,2) = &quot;22&quot;, &quot;Utilities&quot;,
IF(LEFT(NAICS_Code_ProBuilder__c,2) = &quot;23&quot;, &quot;Construction&quot;,
IF(LEFT(NAICS_Code_ProBuilder__c,2) = &quot;31&quot;, &quot;Manufacturing&quot;,
IF(LEFT(NAICS_Code_ProBuilder__c,2) = &quot;32&quot;, &quot;Manufacturing&quot;,
IF(LEFT(NAICS_Code_ProBuilder__c,2) = &quot;33&quot;, &quot;Manufacturing&quot;,
IF(LEFT(NAICS_Code_ProBuilder__c,2) = &quot;42&quot;, &quot;Wholesale Trade&quot;,
IF(LEFT(NAICS_Code_ProBuilder__c,2) = &quot;44&quot;, &quot;Retail Trade&quot;,
IF(LEFT(NAICS_Code_ProBuilder__c,2) = &quot;45&quot;, &quot;Retail Trade&quot;,
IF(LEFT(NAICS_Code_ProBuilder__c,2) = &quot;48&quot;, &quot;Transportation and Warehousing&quot;,
IF(LEFT(NAICS_Code_ProBuilder__c,2) = &quot;49&quot;, &quot;Transportation and Warehousing&quot;,
IF(LEFT(NAICS_Code_ProBuilder__c,2) = &quot;51&quot;, &quot;Information&quot;,
IF(LEFT(NAICS_Code_ProBuilder__c,2) = &quot;52&quot;, &quot;Finance and Insurance&quot;,
IF(LEFT(NAICS_Code_ProBuilder__c,2) = &quot;53&quot;, &quot;Real Estate and Rental and Leasing&quot;,
IF(LEFT(NAICS_Code_ProBuilder__c,2) = &quot;54&quot;, &quot;Professional, Scientific, and Technical Services&quot;,
IF(LEFT(NAICS_Code_ProBuilder__c,2) = &quot;55&quot;, &quot;Management of Companies and Enterprises&quot;,
IF(LEFT(NAICS_Code_ProBuilder__c,2) = &quot;56&quot;, &quot;Administrative and Support and Waste Management and Remediation Services&quot;,
IF(LEFT(NAICS_Code_ProBuilder__c,2) = &quot;61&quot;, &quot;Educational Services&quot;,
IF(LEFT(NAICS_Code_ProBuilder__c,2) = &quot;62&quot;, &quot;Health Care and Social Assistance&quot;,
IF(LEFT(NAICS_Code_ProBuilder__c,2) = &quot;71&quot;, &quot;Arts, Entertainment, and Recreation&quot;,
IF(LEFT(NAICS_Code_ProBuilder__c,2) = &quot;72&quot;, &quot;Accommodation and Food Services&quot;,
IF(LEFT(NAICS_Code_ProBuilder__c,2) = &quot;81&quot;, &quot;Other Services (except Public Administration)&quot;,
IF(LEFT(NAICS_Code_ProBuilder__c,2) = &quot;92&quot;, &quot;Public Administration&quot;,&quot;Populate NAICS Code&quot;))))))))))))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NAICS Code Industry</label>
    <type>Text</type>
</CustomField>