force-app/main/default/objects/Account/fields/NAICS_Lookup_Request_No__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Lookup_Request_No__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>NAICS Lookup Request No.</label>
    <referenceTo>NAICS__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>