force-app/main/default/objects/Account/fields/NEST_Advisor__c.field-meta.xml
<CustomField>
    <fullName>NEST_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NEST 529 Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customers9</relationshipName>
    <type>Lookup</type>
</CustomField>