force-app/main/default/objects/Account/fields/Net_Purchase_Volume__c.field-meta.xml
<CustomField>
    <fullName>Net_Purchase_Volume__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Net Purchase Volume</label>
    <length>7</length>
    <type>Text</type>
</CustomField>