force-app/main/default/objects/Account/fields/No_Activity__c.field-meta.xml
<CustomField>
    <fullName>No_Activity__c</fullName>
    <formula>if(ISBLANK( LastActivityDate ), True, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Activity</label>
    <type>Checkbox</type>
</CustomField>