force-app/main/default/objects/Account/fields/Number_of_Closed_Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Closed_Won_Opportunities__c</fullName>
    <description>Aggregates number of linked opportunities that are Closed Won.</description>
    <label>Number of Closed Won Opportunities</label>
    <summarizedField>Opportunity.of_Closed_Won__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>