force-app/main/default/objects/Account/fields/of_AP_Employees__c.field-meta.xml
<CustomField>
    <fullName>of_AP_Employees__c</fullName>
    <label># of AP Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>