force-app/main/default/objects/Account/fields/of_Bills_Sent_to_Customers__c.field-meta.xml
<CustomField>
    <fullName>of_Bills_Sent_to_Customers__c</fullName>
    <label># of Bills Sent to Customers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>