force-app/main/default/objects/Account/fields/of_Corporate_Profile_Grids__c.field-meta.xml
<CustomField>
    <fullName>of_Corporate_Profile_Grids__c</fullName>
    <label># of Corporate Profile Grids</label>
    <summaryForeignKey>POSI__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>