force-app/main/default/objects/Account/fields/of_IMPAX_Profile_s__c.field-meta.xml
<CustomField>
    <fullName>of_IMPAX_Profile_s__c</fullName>
    <description>Sums the number of related IMPAX Profiles connected to a customer.  A validation rule ensures only one IMPAX per customer</description>
    <label># of IMPAX Profiles</label>
    <summaryForeignKey>IMPAX__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>