force-app/main/default/objects/Account/fields/of_Payments_Monthly__c.field-meta.xml
<CustomField>
    <fullName>of_Payments_Monthly__c</fullName>
    <label># of Payments / Monthly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>