force-app/main/default/objects/Account/fields/of_PCD_record__c.field-meta.xml
<CustomField>
    <fullName>of_PCD_record__c</fullName>
    <label># of PCD record</label>
    <summaryForeignKey>Protected_Customer_Data__c.Parent_Id__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>