force-app/main/default/objects/Account/fields/of_Triggered_Data_Records__c.field-meta.xml
<CustomField>
    <fullName>of_Triggered_Data_Records__c</fullName>
    <label># of Triggered Data Records</label>
    <summaryForeignKey>Triggered_Data__c.Customer_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>