force-app/main/default/objects/Account/fields/of_Variances__c.field-meta.xml
<CustomField>
    <fullName>of_Variances__c</fullName>
    <label># of Variances</label>
    <summaryForeignKey>Customer_Variances__c.Customer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>