force-app/main/default/objects/Account/fields/On_Us__c.field-meta.xml
<CustomField>
    <fullName>On_Us__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>On Us</label>
    <length>16</length>
    <type>Text</type>
</CustomField>