force-app/main/default/objects/Account/fields/One_or_More_Activities__c.field-meta.xml
<CustomField>
    <fullName>One_or_More_Activities__c</fullName>
    <formula>IF(ISBLANK(LastActivityDate), 0, 1)</formula>
    <label># One or More Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>