force-app/main/default/objects/Account/fields/One_or_More_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>One_or_More_Opportunities__c</fullName>
    <formula>IF( Count_of_Opportunities__c &gt;0, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># One or More Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>