force-app/main/default/objects/Account/fields/Online_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Online_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online Indicator</label>
    <type>Checkbox</type>
</CustomField>