force-app/main/default/objects/Account/fields/Other_ERM_Accounting_Software__c.field-meta.xml
<CustomField>
    <fullName>Other_ERM_Accounting_Software__c</fullName>
    <description>Used to capture accounting software when &quot;other&quot; is selected in the ERM Accounting Software field.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Must be completed when &quot;Other&quot; is selected for ERM Accounting Software</inlineHelpText>
    <label>Other ERM Accounting Software</label>
    <length>255</length>
    <type>Text</type>
</CustomField>