force-app/main/default/objects/Account/fields/Owner_Market__c.field-meta.xml
<CustomField>
    <fullName>Owner_Market__c</fullName>
    <formula>text( Owner.User_s_Market__c)</formula>
    <label>Owner Market</label>
    <type>Text</type>
</CustomField>