force-app/main/default/objects/Account/fields/Partnership_Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Agreement_Type__c</fullName>
    <description>Used to identify the Agreement types for the Partnership Group</description>
    <formula>if( and(FNBO_Agreement__c=True, Route_One__c = True),&quot;Dual Agreement&quot;,if( and(FNBO_Agreement__c=True, Route_One__c = False),&quot;FNBO Agreement&quot;,if( and(FNBO_Agreement__c=False, Route_One__c = True),&quot;Route One&quot;,&quot;No Agreement&quot;)))</formula>
    <label>Partnership Agreement Type</label>
    <type>Text</type>
</CustomField>