force-app/main/default/objects/Account/fields/Partnership_Card_Contract__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Card_Contract__c</fullName>
    <label>Partnership Card Contract Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FNBO</fullName>
            </value>
            <value>
                <fullName>Route 1</fullName>
            </value>
            <value>
                <fullName>DealerTrack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>