force-app/main/default/objects/Account/fields/POS_Campaigns__c.field-meta.xml
<CustomField>
    <fullName>POS_Campaigns__c</fullName>
    <description>Used to track which FBC Partnership campaign materials have been delieverd to dealers</description>
    <label>POS Campaigns</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BusinessLink Launch</fullName>
            </value>
            <value>
                <fullName>ES3</fullName>
            </value>
            <value>
                <fullName>Good Surprise</fullName>
            </value>
            <value>
                <fullName>Mopar Wholesale Launch</fullName>
            </value>
            <value>
                <fullName>New Card Smell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>