force-app/main/default/objects/Account/fields/Precision_Lender_ID__c.field-meta.xml
<CustomField>
    <fullName>Precision_Lender_ID__c</fullName>
    <description>Unique ID used to identify FN Accounts / customers in the Precision Lender system.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This ID connects this Salesforce Account to Precision Lender.</inlineHelpText>
    <label>Precision Lender Relationship ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>