force-app/main/default/objects/Account/fields/Product_Available__c.field-meta.xml
<CustomField>
    <fullName>Product_Available__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Available</label>
    <length>20</length>
    <type>Text</type>
</CustomField>