force-app/main/default/objects/Account/fields/Put_This_Contact_First__c.field-meta.xml
<CustomField>
    <fullName>Put_This_Contact_First__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you&#39;d like this Contact&#39;s title and name first in the addressee lines</inlineHelpText>
    <label>Put First in Addressee</label>
    <type>Checkbox</type>
</CustomField>