force-app/main/default/objects/Account/fields/r1_agreeement_date__c.field-meta.xml
<CustomField>
    <fullName>r1_agreeement_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>R1DA Agreement Date</label>
    <type>Date</type>
</CustomField>