force-app/main/default/objects/Account/fields/Reason_for_changing_owner__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_changing_owner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason for changing owner</label>
    <length>110</length>
    <type>Text</type>
</CustomField>