force-app/main/default/objects/Account/fields/Receivables_Payment_Types__c.field-meta.xml
<CustomField>
    <fullName>Receivables_Payment_Types__c</fullName>
    <label>Receivables - Payment Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>AH</fullName>
                <isActive>false</isActive>
                <label>AH</label>
            </value>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>