force-app/main/default/objects/Account/fields/Retail_Banker__c.field-meta.xml
<CustomField>
    <fullName>Retail_Banker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retail Banker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customers2</relationshipName>
    <type>Lookup</type>
</CustomField>