force-app/main/default/objects/Account/fields/Route_One__c.field-meta.xml
<CustomField>
    <fullName>Route_One__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Route One</label>
    <type>Checkbox</type>
</CustomField>