force-app/main/default/objects/Account/fields/Sales_Group_Size__c.field-meta.xml
<CustomField>
    <fullName>Sales_Group_Size__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Group Size</label>
    <length>2</length>
    <type>Text</type>
</CustomField>