force-app/main/default/objects/Account/fields/Sales_Volume_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Volume_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Volume Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>