force-app/main/default/objects/Account/fields/Salutation1__c.field-meta.xml
<CustomField>
    <fullName>Salutation1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please don&#39;t use salutation such as &quot;Dear&quot; or a title such as &quot;Dr.&quot; in this field;  Name or Nickname only.   Do not add a colon.</inlineHelpText>
    <label>Salutation</label>
    <length>120</length>
    <type>Text</type>
</CustomField>