force-app/main/default/objects/Account/fields/Second_Deactiviation_Date__c.field-meta.xml
<CustomField>
    <fullName>Second_Deactiviation_Date__c</fullName>
    <description>Date of second DNA offense by Chrysler Dealership</description>
    <encryptionScheme>None</encryptionScheme>
    <label>2nd Offense Deactivation Date</label>
    <type>Date</type>
</CustomField>