force-app/main/default/objects/Account/fields/Second_Offense__c.field-meta.xml
<CustomField>
    <fullName>Second_Offense__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Second DNA Offense by Chrysler Dealership</description>
    <label>Second Offense</label>
    <type>Checkbox</type>
</CustomField>