force-app/main/default/objects/Account/fields/Second_Offense_Reactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>Second_Offense_Reactivation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>2nd Offense Reactivation Date</label>
    <type>Date</type>
</CustomField>