force-app/main/default/objects/Account/fields/Size_of_Affinity_from_Gemalto__c.field-meta.xml
<CustomField>
    <fullName>Size_of_Affinity_from_Gemalto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Size of Affinity from Gemalto</label>
    <length>40</length>
    <type>Text</type>
</CustomField>