force-app/main/default/objects/Account/fields/Small_Business_RM__c.field-meta.xml
<CustomField>
    <fullName>Small_Business_RM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Small Business RM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customers5</relationshipName>
    <type>Lookup</type>
</CustomField>