force-app/main/default/objects/Account/fields/Source_Unfunded_Trust_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Unfunded_Trust_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source Unfunded Trust ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>