force-app/main/default/objects/Account/fields/Task_Upsert_Helper__c.field-meta.xml
<CustomField>
    <fullName>Task_Upsert_Helper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Task Upsert Helper</label>
    <type>Checkbox</type>
</CustomField>