force-app/main/default/objects/Account/fields/Third_Deactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>Third_Deactivation_Date__c</fullName>
    <description>Date of third DNA offense by Chrysler Dealership</description>
    <encryptionScheme>None</encryptionScheme>
    <label>3rd Offense Deactivation Date</label>
    <type>Date</type>
</CustomField>