force-app/main/default/objects/Account/fields/Third_Offense__c.field-meta.xml
<CustomField>
    <fullName>Third_Offense__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Third DNA Offense by Chrysler Dealership</description>
    <label>Third Offense</label>
    <type>Checkbox</type>
</CustomField>