force-app/main/default/objects/Account/fields/Third_Offense_Reactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>Third_Offense_Reactivation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>3rd Offense Reactivation Date</label>
    <type>Date</type>
</CustomField>