force-app/main/default/objects/Account/fields/Total_AP_Spend__c.field-meta.xml
<CustomField>
    <fullName>Total_AP_Spend__c</fullName>
    <label>Total AP Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>