force-app/main/default/objects/Account/fields/Total_Closed_Won_Opps__c.field-meta.xml
<CustomField>
    <fullName>Total_Closed_Won_Opps__c</fullName>
    <label>Total Closed Won Opps</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>